tdf#162211 tdf#137590 layoutInCell: vertical escaping with wrapThrough

This patch allows shapes to go "from top" above the cell frame.
(This was already working horizontally,
and for positive, downward values).

In theory, this should not be needed for ODT layout.
ODT UI shouldn't allow cell-escaping values to be used.

It does not currently affect FRAME/FRAME _shapes_
because those forcefully turn off layoutInCell,
but it does affect FRAME/FRAME _images_
whose code path does not forcefully turn off layoutInCell.

There are a few more places in the code
where AdjustVertRelPos() is called,
but most had no matching unit tests.
I assume it is probably because we already don't CheckBottom.

The following unit tests are affected by this patch
PAGE/PAGE
-tdf81345.docx (81345_045Original) [big green gradient - fixed]
-tdf115883.docx [compat15 - miniscule .03cm offset]

image - FRAME/FRAME
-tdf135595_HFtableWrap_c12.docx [after round-trip - fixed]
-tdf135595_HFtableWrap.odt [footer logo moves up - fixed]
-layout-in-cell-2.docx [extremely minor offsets]

make CppunitTest_sw_ooxmlexport14 \
    CPPUNIT_TEST_NAME=testTdf135595_HFtableWrap

These will be affected if layoutInCell is not forced off.
shape - FRAME/FRAME
-fdo68607.docx
-test_segfault_while_save.docx [even zOrder is fixed somehow]
-layout-in-cell-wrapnone-column.docx

Change-Id: I13b030a2e7117557dd9794c0eb9bd74a0d67b82f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171436
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Reviewed-by: Justin Luth <jluth@mail.com>